# gobject-examples

./: .gitignore  CMakeLists.txt
01-media-from-book/: CMakeLists.txt  media.c
02-point-inheritance/: CMakeLists.txt  dopoints.c
03-order-of-callbacks/: CMakeLists.txt  doorders.c
04-define-type-macros/: CMakeLists.txt  dot.c
05-bank-account/: CMakeLists.txt  robthebank.c
06-binary-tree/: CMakeLists.txt  testbtree.c
07-currency-interfaces/: CMakeLists.txt  launder.c
tap/: CMakeLists.txt  tap.h
